modify some css selectors to be more specific modify cells so they have a bg colour on hover modify cells so the cursor changes to crosshair for fun fix some css properties using 'none' as bg colour - oops add some padding to nav links on smaller screens for easier tapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,6 @@
 RESET
 ***********************/
 html {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 html, body {
@@ -49,14 +47,11 @@ HEADER
     margin-top: 0;
     font-weight: 700;
     color: #373737;
+    font-size: 3em;
+    font-family: 'Bungee', sans-serif;
 }
 #topnav {
     text-align: center;
-}
-#topnav a {
-    padding: 15px;
-    text-decoration: none;
-    color: #f4f4f4;
 }
 #topnav ul {
     list-style: none;
@@ -69,10 +64,15 @@ HEADER
     height: 40px;
     padding: 12px;
     margin: 0 0 5px 0;
-    background-color: #373737;
+    background: #373737;
     font-weight: 700;
     line-height: 1em;
     font-size: 0.9em;
+}
+#topnav ul li a {
+    padding: 10px 50px;
+    text-decoration: none;
+    color: #f4f4f4;
 }
 /**********************
 HERO
@@ -113,6 +113,10 @@ PORTFOLIO && GRID
 .cell {
     width: 100%;
     margin-bottom: 20px;
+}
+.cell:hover {
+    background-color: #212121;
+    cursor: crosshair;
 }
 .cell:last-child {
     margin-bottom: 50px;
@@ -230,9 +234,10 @@ MIN 768
     }
     #home h1 {
         margin-top: 0;
-        font-size: 1.8em;
+        font-size: 2.5em;
         font-weight: 700;
         margin-bottom: 10px;
+        line-height: 1em;
     }
     #topnav ul {
         width: 100%;
@@ -242,19 +247,18 @@ MIN 768
         align-items: center;
         margin-bottom: 2.5em;
     }
-    #topnav a {
-        transition: all 300ms ease-out;
-    }
-    #topnav a:hover {
-        border-bottom: 2px solid #1a1f2b;
-    }
     #topnav ul li {
-        background-color: #848484;
+        background-color: transparent;
     }
     #topnav ul li a {
+        transition: all 300ms ease-out;
         width: 10%;
         margin: 0 5px 0 5px;
-        background-color: #848484;
+        padding: 10px;
+        background-color: transparent;
+    }
+    #topnav ul li a:hover {
+        border-bottom: 2px solid #1a1f2b;
     }
     /**********************
     HERO
@@ -376,8 +380,9 @@ MIN 768
     }
     #footernav ul li a {
         width: 10%;
-        margin: 0 5px 0 5px;
         color: #f4f4f4;
+        padding: 10px 10px 10px 10px;
+        margin: 0;
     }
 }
 /**********************
@@ -489,6 +494,6 @@ MIN 1300
     .hero p {
         margin: 0 auto;
         width: 30%;
-        text-align: center;
+        text-align: left;
     }
 }
